--- a/molecule/default/destroy.yml
+++ b/molecule/default/destroy.yml
@@ -8,42 +8,92 @@
 
   vars:
     region: eu-central-1
+    role_tag_key: Role
+    role_tag_value: molecule-nginx-test
+    name_prefixes: ["molecule-nginx-test-"]
+    molecule_instance_config: "{{ lookup('env', 'MOLECULE_INSTANCE_CONFIG') | default('/tmp/molecule_instance_config.yml', true) }}"
 
   tasks:
-    - name: Read Molecule instance configuration (if it exists)
-      slurp:
-        src: "{{ molecule_instance_config }}"
+    - name: Stat instance_config.yml
+      ansible.builtin.stat:
+        path: "{{ molecule_instance_config }}"
+      register: ic_stat
+
+    - name: Read instance_config.yml when present
+      ansible.builtin.slurp:
+        path: "{{ molecule_instance_config }}"
       register: instance_conf_raw
-      ignore_errors: true
+      when: ic_stat.stat.exists
 
     - name: Parse instance configuration
-      set_fact:
-        instance_conf: "{{ instance_conf_raw['content'] | b64decode | from_yaml }}"
-      when: instance_conf_raw is defined and instance_conf_raw.content is defined
+      ansible.builtin.set_fact:
+        instance_conf: "{{ instance_conf_raw.content | b64decode | from_yaml | default([]) }}"
+      when: ic_stat.stat.exists
 
-    - name: Extract instance public IP(s)
-      set_fact:
-        instance_addresses: "{{ instance_conf | map(attribute='address') | list }}"
-      when: instance_conf is defined
+    - name: Collect instance IDs from file (if any)
+      ansible.builtin.set_fact:
+        ids_from_file: "{{ instance_conf | map(attribute='instance_id') | select('defined') | list }}"
+      when: ic_stat.stat.exists
 
-    - name: Find instances to terminate
+    - name: Lookup instances by Role tag
       amazon.aws.ec2_instance_info:
         region: "{{ region }}"
         filters:
-          "network-interface.addresses.association.public-ip": "{{ item }}"
-      loop: "{{ instance_addresses | default([]) }}"
-      register: ec2_info
-      when: instance_addresses is defined
+          "tag:{{ role_tag_key }}": "{{ role_tag_value }}"
+          instance-state-name:
+            - pending
+            - running
+            - stopping
+            - stopped
+      register: ec2_by_role
 
-    - name: Terminate instances
-      amazon.aws.ec2_instance:
-        instance_ids: "{{ item.instances | map(attribute='instance_id') | list }}"
-        state: terminated
+    - name: Collect IDs from Role tag lookup
+      ansible.builtin.set_fact:
+        ids_from_role: "{{ ec2_by_role.instances | map(attribute='instance_id') | list | default([]) }}"
+
+    - name: List all instances in region (broad safety net)
+      amazon.aws.ec2_instance_info:
         region: "{{ region }}"
-      loop: "{{ ec2_info.results | default([]) }}"
-      when: item.instances | length > 0
+      register: ec2_all
+
+    - name: Filter instances locally by Role tag (and optional Name prefixes)
+      ansible.builtin.set_fact:
+        ids_from_local_filter: >-
+          {{
+            ec2_all.instances
+            | selectattr('tags', 'defined')
+            | selectattr('tags.' ~ role_tag_key, 'defined')
+            | selectattr('tags.' ~ role_tag_key, 'equalto', role_tag_value)
+            | selectattr('tags.Name', 'defined')
+            | selectattr('tags.Name', 'search', '(' ~ (name_prefixes | map('regex_escape') | join('|')) ~ ')')
+            | map(attribute='instance_id')
+            | list
+          }}
+
+    - name: Compute final list of instance IDs to terminate
+      ansible.builtin.set_fact:
+        instance_ids_to_terminate: >-
+          {{
+            (
+              (ids_from_file | default([]))
+              + (ids_from_role | default([]))
+              + (ids_from_local_filter | default([]))
+            ) | unique
+          }}
+
+    - name: Show what will be terminated
+      ansible.builtin.debug:
+        msg: "Terminating instances: {{ instance_ids_to_terminate | default([]) }}"
+
+    - name: Terminate instances (if any)
+      amazon.aws.ec2_instance:
+        region: "{{ region }}"
+        instance_ids: "{{ instance_ids_to_terminate }}"
+        state: absent
+        wait: true
+      when: instance_ids_to_terminate | length > 0
 
     - name: Remove Molecule instance config file
-      file:
+      ansible.builtin.file:
         path: "{{ molecule_instance_config }}"
         state: absent
